--- a/index.css
+++ b/index.css
@@ -325,11 +325,16 @@ transition: all 0.5s ease;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 110%;
+    
     height: 120vh;
     
     }
     
+    body{
+        width: 100%;
+    }
+
+
     .navbar
     {
     position: fixed;
