--- a/index.css
+++ b/index.css
@@ -323,7 +323,7 @@ transition: all 0.5s ease;
     background-size: cover;
     background-position: center;
     
-    height: 120vh;
+    height: 900px;
     
     }
     
