--- a/portofolio.css
+++ b/portofolio.css
@@ -698,3 +698,26 @@ margin-left: 85px;
 }
 
 }
+
+html{
+    width: 100%;
+}
+
+
+#about{
+width: 100%;
+
+}
+
+
+
+#conatct{
+    width: 100%;
+    
+    }
+
+
+    #projectss{
+        width: 100%;
+        
+        }
